fixed logo colors in dark mode

--- a/styles.css
+++ b/styles.css
@@ -254,6 +254,9 @@ footer {
     nav {
         background: var(--secondary-light);
     }
+    nav img {
+        filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(7500%) hue-rotate(233deg) brightness(96%) contrast(104%)
+    }
     nav ul li a {
         color: var(--primary-light);
     }
@@ -268,7 +271,7 @@ footer {
     .button-project-tile {
         color: var(--primary-light);
     }
-    .footer-links a {
-        color: var(--primary-light);
+    .footer-links a img{
+        filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(7500%) hue-rotate(233deg) brightness(96%) contrast(104%);
     }
 }
